force-app/main/default/objects/Billing__c/Billing__c.object-meta.xml
<CustomObject>
    <label>Billing</label>
    <nameField>
        <label>Billing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>