force-app/main/default/objects/Billing__c/fields/Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Check_Out__c</fullName>
    <label>Check-Out</label>
    <type>Date</type>
</CustomField>