force-app/main/default/objects/Billing__c/fields/Customer1__c.field-meta.xml
<CustomField>
    <fullName>Customer1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer1</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Billings</relationshipLabel>
    <relationshipName>Billings</relationshipName>
    <type>Lookup</type>
</CustomField>