force-app/main/default/objects/Billing__c/fields/dummy__c.field-meta.xml
<CustomField>
    <fullName>dummy__c</fullName>
    <label>dummy</label>
    <length>67</length>
    <type>Text</type>
</CustomField>