force-app/main/default/objects/Billing__c/fields/jsdd__c.field-meta.xml
<CustomField>
    <fullName>jsdd__c</fullName>
    <label>jsdd</label>
    <length>23</length>
    <type>Text</type>
</CustomField>