force-app/main/default/objects/Billing__c/fields/MethodOfPayment__c.field-meta.xml
<CustomField>
    <fullName>MethodOfPayment__c</fullName>
    <label>MethodOfPayment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash In Hand</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>credit Card / Debit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>